fix del z-index del content

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -72,6 +72,8 @@ body {
 }
 
 .content{
+  z-index: 15;
+
   .social-container, .wood-confirm-container, .wood-container{
     li{
       margin-bottom: 7%;
